# yapping

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: index.html
src/: main.cpp
src/client/: main.cpp
src/server/: main.cpp
